// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Cube Can do basic moves 1`] = `
Cube {
  "centers": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "corners": {
    "orient": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      3,
      0,
      1,
      2,
      4,
      5,
      6,
      7,
    ],
  },
  "edges": {
    "orient": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      3,
      0,
      1,
      2,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
    ],
  },
  "moves": " U",
}
`;

exports[`Cube Can do basic moves 2`] = `
Cube {
  "centers": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "corners": {
    "orient": [
      0,
      2,
      1,
      0,
      0,
      1,
      2,
      0,
    ],
    "perm": [
      3,
      1,
      6,
      2,
      4,
      0,
      5,
      7,
    ],
  },
  "edges": {
    "orient": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      3,
      6,
      1,
      2,
      4,
      0,
      9,
      7,
      8,
      5,
      10,
      11,
    ],
  },
  "moves": " U R",
}
`;

exports[`Cube Can do basic moves 3`] = `
Cube {
  "centers": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "corners": {
    "orient": [
      0,
      2,
      2,
      1,
      0,
      1,
      2,
      1,
    ],
    "perm": [
      3,
      1,
      2,
      7,
      4,
      0,
      6,
      5,
    ],
  },
  "edges": {
    "orient": [
      0,
      0,
      1,
      0,
      0,
      0,
      1,
      1,
      0,
      0,
      1,
      0,
    ],
    "perm": [
      3,
      6,
      7,
      2,
      4,
      0,
      1,
      10,
      8,
      5,
      9,
      11,
    ],
  },
  "moves": " U R F",
}
`;

exports[`Cube Can do basic moves 4`] = `
Cube {
  "centers": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "corners": {
    "orient": [
      0,
      2,
      2,
      1,
      1,
      2,
      1,
      0,
    ],
    "perm": [
      3,
      1,
      2,
      7,
      0,
      6,
      5,
      4,
    ],
  },
  "edges": {
    "orient": [
      0,
      0,
      1,
      0,
      0,
      0,
      1,
      1,
      0,
      1,
      0,
      0,
    ],
    "perm": [
      3,
      6,
      7,
      2,
      4,
      0,
      1,
      10,
      5,
      9,
      11,
      8,
    ],
  },
  "moves": " U R F D",
}
`;

exports[`Cube Can do basic moves 5`] = `
Cube {
  "centers": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "corners": {
    "orient": [
      2,
      2,
      2,
      2,
      2,
      2,
      1,
      2,
    ],
    "perm": [
      0,
      1,
      2,
      3,
      4,
      6,
      5,
      7,
    ],
  },
  "edges": {
    "orient": [
      0,
      0,
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      1,
      0,
      1,
    ],
    "perm": [
      3,
      6,
      7,
      4,
      8,
      0,
      1,
      2,
      5,
      9,
      11,
      10,
    ],
  },
  "moves": " U R F D L",
}
`;

exports[`Cube Can do basic moves 6`] = `
Cube {
  "centers": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "corners": {
    "orient": [
      1,
      0,
      2,
      2,
      0,
      1,
      1,
      2,
    ],
    "perm": [
      1,
      6,
      2,
      3,
      0,
      4,
      5,
      7,
    ],
  },
  "edges": {
    "orient": [
      1,
      0,
      1,
      0,
      1,
      1,
      1,
      0,
      1,
      1,
      0,
      1,
    ],
    "perm": [
      0,
      6,
      7,
      4,
      3,
      5,
      1,
      2,
      8,
      9,
      11,
      10,
    ],
  },
  "moves": " U R F D L B",
}
`;

exports[`Cube Cube.getFace 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube Cube.getFace 2`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube Cube.getFace 3`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube U: U up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube U: U down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube U: U left 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube U: U right 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube U: U front 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube U: U back 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube R: R up 1`] = `
[
  [
    "up",
    "up",
    "front",
  ],
  [
    "up",
    "up",
    "front",
  ],
  [
    "up",
    "up",
    "front",
  ],
]
`;

exports[`Cube R: R down 1`] = `
[
  [
    "down",
    "down",
    "back",
  ],
  [
    "down",
    "down",
    "back",
  ],
  [
    "down",
    "down",
    "back",
  ],
]
`;

exports[`Cube R: R left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube R: R right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube R: R front 1`] = `
[
  [
    "front",
    "front",
    "down",
  ],
  [
    "front",
    "front",
    "down",
  ],
  [
    "front",
    "front",
    "down",
  ],
]
`;

exports[`Cube R: R back 1`] = `
[
  [
    "up",
    "back",
    "back",
  ],
  [
    "up",
    "back",
    "back",
  ],
  [
    "up",
    "back",
    "back",
  ],
]
`;

exports[`Cube F: F up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube F: F down 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube F: F left 1`] = `
[
  [
    "left",
    "left",
    "down",
  ],
  [
    "left",
    "left",
    "down",
  ],
  [
    "left",
    "left",
    "down",
  ],
]
`;

exports[`Cube F: F right 1`] = `
[
  [
    "up",
    "right",
    "right",
  ],
  [
    "up",
    "right",
    "right",
  ],
  [
    "up",
    "right",
    "right",
  ],
]
`;

exports[`Cube F: F front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube F: F back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube D: D up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube D: D down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube D: D left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube D: D right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube D: D front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube D: D back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube L: L up 1`] = `
[
  [
    "back",
    "up",
    "up",
  ],
  [
    "back",
    "up",
    "up",
  ],
  [
    "back",
    "up",
    "up",
  ],
]
`;

exports[`Cube L: L down 1`] = `
[
  [
    "front",
    "down",
    "down",
  ],
  [
    "front",
    "down",
    "down",
  ],
  [
    "front",
    "down",
    "down",
  ],
]
`;

exports[`Cube L: L left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube L: L right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube L: L front 1`] = `
[
  [
    "up",
    "front",
    "front",
  ],
  [
    "up",
    "front",
    "front",
  ],
  [
    "up",
    "front",
    "front",
  ],
]
`;

exports[`Cube L: L back 1`] = `
[
  [
    "back",
    "back",
    "down",
  ],
  [
    "back",
    "back",
    "down",
  ],
  [
    "back",
    "back",
    "down",
  ],
]
`;

exports[`Cube B: B up 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube B: B down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube B: B left 1`] = `
[
  [
    "up",
    "left",
    "left",
  ],
  [
    "up",
    "left",
    "left",
  ],
  [
    "up",
    "left",
    "left",
  ],
]
`;

exports[`Cube B: B right 1`] = `
[
  [
    "right",
    "right",
    "down",
  ],
  [
    "right",
    "right",
    "down",
  ],
  [
    "right",
    "right",
    "down",
  ],
]
`;

exports[`Cube B: B front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube B: B back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube M: M up 1`] = `
[
  [
    "up",
    "back",
    "up",
  ],
  [
    "up",
    "back",
    "up",
  ],
  [
    "up",
    "back",
    "up",
  ],
]
`;

exports[`Cube M: M down 1`] = `
[
  [
    "down",
    "front",
    "down",
  ],
  [
    "down",
    "front",
    "down",
  ],
  [
    "down",
    "front",
    "down",
  ],
]
`;

exports[`Cube M: M left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube M: M right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube M: M front 1`] = `
[
  [
    "front",
    "up",
    "front",
  ],
  [
    "front",
    "up",
    "front",
  ],
  [
    "front",
    "up",
    "front",
  ],
]
`;

exports[`Cube M: M back 1`] = `
[
  [
    "back",
    "down",
    "back",
  ],
  [
    "back",
    "down",
    "back",
  ],
  [
    "back",
    "down",
    "back",
  ],
]
`;

exports[`Cube E: E up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube E: E down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube E: E left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube E: E right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube E: E front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube E: E back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube S: S up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube S: S down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube S: S left 1`] = `
[
  [
    "left",
    "down",
    "left",
  ],
  [
    "left",
    "down",
    "left",
  ],
  [
    "left",
    "down",
    "left",
  ],
]
`;

exports[`Cube S: S right 1`] = `
[
  [
    "right",
    "up",
    "right",
  ],
  [
    "right",
    "up",
    "right",
  ],
  [
    "right",
    "up",
    "right",
  ],
]
`;

exports[`Cube S: S front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube S: S back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube l: l cube 1`] = `
Cube {
  "centers": [
    4,
    1,
    0,
    3,
    5,
    2,
  ],
  "corners": {
    "orient": [
      1,
      0,
      0,
      2,
      2,
      0,
      0,
      1,
    ],
    "perm": [
      4,
      1,
      2,
      0,
      7,
      5,
      6,
      3,
    ],
  },
  "edges": {
    "orient": [
      1,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      1,
      0,
    ],
    "perm": [
      8,
      1,
      0,
      4,
      11,
      5,
      6,
      3,
      10,
      9,
      2,
      7,
    ],
  },
  "moves": " l",
}
`;

exports[`Cube l: l up 1`] = `
[
  [
    "back",
    "back",
    "up",
  ],
  [
    "back",
    "back",
    "up",
  ],
  [
    "back",
    "back",
    "up",
  ],
]
`;

exports[`Cube l: l down 1`] = `
[
  [
    "front",
    "front",
    "down",
  ],
  [
    "front",
    "front",
    "down",
  ],
  [
    "front",
    "front",
    "down",
  ],
]
`;

exports[`Cube l: l left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube l: l right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube l: l front 1`] = `
[
  [
    "up",
    "up",
    "front",
  ],
  [
    "up",
    "up",
    "front",
  ],
  [
    "up",
    "up",
    "front",
  ],
]
`;

exports[`Cube l: l back 1`] = `
[
  [
    "back",
    "down",
    "down",
  ],
  [
    "back",
    "down",
    "down",
  ],
  [
    "back",
    "down",
    "down",
  ],
]
`;

exports[`Cube r: r cube 1`] = `
Cube {
  "centers": [
    2,
    1,
    5,
    3,
    0,
    4,
  ],
  "corners": {
    "orient": [
      0,
      2,
      1,
      0,
      0,
      1,
      2,
      0,
    ],
    "perm": [
      0,
      2,
      6,
      3,
      4,
      1,
      5,
      7,
    ],
  },
  "edges": {
    "orient": [
      1,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      1,
      0,
    ],
    "perm": [
      2,
      6,
      10,
      3,
      4,
      1,
      9,
      7,
      0,
      5,
      8,
      11,
    ],
  },
  "moves": " r",
}
`;

exports[`Cube r: r up 1`] = `
[
  [
    "up",
    "front",
    "front",
  ],
  [
    "up",
    "front",
    "front",
  ],
  [
    "up",
    "front",
    "front",
  ],
]
`;

exports[`Cube r: r down 1`] = `
[
  [
    "down",
    "back",
    "back",
  ],
  [
    "down",
    "back",
    "back",
  ],
  [
    "down",
    "back",
    "back",
  ],
]
`;

exports[`Cube r: r left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube r: r right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube r: r front 1`] = `
[
  [
    "front",
    "down",
    "down",
  ],
  [
    "front",
    "down",
    "down",
  ],
  [
    "front",
    "down",
    "down",
  ],
]
`;

exports[`Cube r: r back 1`] = `
[
  [
    "up",
    "up",
    "back",
  ],
  [
    "up",
    "up",
    "back",
  ],
  [
    "up",
    "up",
    "back",
  ],
]
`;

exports[`Cube f: f cube 1`] = `
Cube {
  "centers": [
    1,
    5,
    2,
    0,
    4,
    3,
  ],
  "corners": {
    "orient": [
      0,
      0,
      2,
      1,
      0,
      0,
      1,
      2,
    ],
    "perm": [
      0,
      1,
      3,
      7,
      4,
      5,
      2,
      6,
    ],
  },
  "edges": {
    "orient": [
      0,
      1,
      1,
      1,
      0,
      0,
      1,
      1,
      0,
      1,
      1,
      1,
    ],
    "perm": [
      0,
      3,
      7,
      11,
      4,
      5,
      2,
      10,
      8,
      1,
      6,
      9,
    ],
  },
  "moves": " f",
}
`;

exports[`Cube f: f up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube f: f down 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube f: f left 1`] = `
[
  [
    "left",
    "down",
    "down",
  ],
  [
    "left",
    "down",
    "down",
  ],
  [
    "left",
    "down",
    "down",
  ],
]
`;

exports[`Cube f: f right 1`] = `
[
  [
    "up",
    "up",
    "right",
  ],
  [
    "up",
    "up",
    "right",
  ],
  [
    "up",
    "up",
    "right",
  ],
]
`;

exports[`Cube f: f front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube f: f back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube b: b cube 1`] = `
Cube {
  "centers": [
    3,
    0,
    2,
    5,
    4,
    1,
  ],
  "corners": {
    "orient": [
      2,
      1,
      0,
      0,
      1,
      2,
      0,
      0,
    ],
    "perm": [
      1,
      5,
      2,
      3,
      0,
      4,
      6,
      7,
    ],
  },
  "edges": {
    "orient": [
      1,
      1,
      0,
      1,
      1,
      1,
      0,
      0,
      1,
      1,
      0,
      1,
    ],
    "perm": [
      5,
      9,
      2,
      1,
      0,
      8,
      6,
      7,
      4,
      11,
      10,
      3,
    ],
  },
  "moves": " b",
}
`;

exports[`Cube b: b up 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube b: b down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube b: b left 1`] = `
[
  [
    "up",
    "up",
    "left",
  ],
  [
    "up",
    "up",
    "left",
  ],
  [
    "up",
    "up",
    "left",
  ],
]
`;

exports[`Cube b: b right 1`] = `
[
  [
    "right",
    "down",
    "down",
  ],
  [
    "right",
    "down",
    "down",
  ],
  [
    "right",
    "down",
    "down",
  ],
]
`;

exports[`Cube b: b front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube b: b back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube u: u cube 1`] = `
Cube {
  "centers": [
    0,
    2,
    3,
    4,
    1,
    5,
  ],
  "corners": {
    "orient": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      3,
      0,
      1,
      2,
      4,
      5,
      6,
      7,
    ],
  },
  "edges": {
    "orient": [
      0,
      0,
      0,
      0,
      1,
      1,
      1,
      1,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      3,
      0,
      1,
      2,
      7,
      4,
      5,
      6,
      8,
      9,
      10,
      11,
    ],
  },
  "moves": " u",
}
`;

exports[`Cube u: u up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube u: u down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube u: u left 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube u: u right 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube u: u front 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube u: u back 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube d: d cube 1`] = `
Cube {
  "centers": [
    0,
    4,
    1,
    2,
    3,
    5,
  ],
  "corners": {
    "orient": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      0,
      1,
      2,
      3,
      5,
      6,
      7,
      4,
    ],
  },
  "edges": {
    "orient": [
      0,
      0,
      0,
      0,
      1,
      1,
      1,
      1,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      0,
      1,
      2,
      3,
      5,
      6,
      7,
      4,
      9,
      10,
      11,
      8,
    ],
  },
  "moves": " d",
}
`;

exports[`Cube d: d up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube d: d down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube d: d left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube d: d right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube d: d front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube d: d back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube y: y cube 1`] = `
Cube {
  "centers": [
    0,
    2,
    3,
    4,
    1,
    5,
  ],
  "corners": {
    "orient": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      3,
      0,
      1,
      2,
      7,
      4,
      5,
      6,
    ],
  },
  "edges": {
    "orient": [
      0,
      0,
      0,
      0,
      1,
      1,
      1,
      1,
      0,
      0,
      0,
      0,
    ],
    "perm": [
      3,
      0,
      1,
      2,
      7,
      4,
      5,
      6,
      11,
      8,
      9,
      10,
    ],
  },
  "moves": " y",
}
`;

exports[`Cube y: y up 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube y: y down 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube y: y left 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube y: y right 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube y: y front 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube y: y back 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube x: x cube 1`] = `
Cube {
  "centers": [
    2,
    1,
    5,
    3,
    0,
    4,
  ],
  "corners": {
    "orient": [
      1,
      2,
      1,
      2,
      2,
      1,
      2,
      1,
    ],
    "perm": [
      3,
      2,
      6,
      7,
      0,
      1,
      5,
      4,
    ],
  },
  "edges": {
    "orient": [
      1,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      1,
      0,
    ],
    "perm": [
      2,
      6,
      10,
      7,
      3,
      1,
      9,
      11,
      0,
      5,
      8,
      4,
    ],
  },
  "moves": " x",
}
`;

exports[`Cube x: x up 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube x: x down 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube x: x left 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube x: x right 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube x: x front 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube x: x back 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube z: z cube 1`] = `
Cube {
  "centers": [
    1,
    5,
    2,
    0,
    4,
    3,
  ],
  "corners": {
    "orient": [
      2,
      1,
      2,
      1,
      1,
      2,
      1,
      2,
    ],
    "perm": [
      4,
      0,
      3,
      7,
      5,
      1,
      2,
      6,
    ],
  },
  "edges": {
    "orient": [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "perm": [
      4,
      3,
      7,
      11,
      8,
      0,
      2,
      10,
      5,
      1,
      6,
      9,
    ],
  },
  "moves": " z",
}
`;

exports[`Cube z: z up 1`] = `
[
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
  [
    "left",
    "left",
    "left",
  ],
]
`;

exports[`Cube z: z down 1`] = `
[
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
  [
    "right",
    "right",
    "right",
  ],
]
`;

exports[`Cube z: z left 1`] = `
[
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
  [
    "down",
    "down",
    "down",
  ],
]
`;

exports[`Cube z: z right 1`] = `
[
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
  [
    "up",
    "up",
    "up",
  ],
]
`;

exports[`Cube z: z front 1`] = `
[
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
  [
    "front",
    "front",
    "front",
  ],
]
`;

exports[`Cube z: z back 1`] = `
[
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
  [
    "back",
    "back",
    "back",
  ],
]
`;

exports[`Cube scramble 1`] = `
Cube {
  "centers": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "corners": {
    "orient": [
      1,
      1,
      2,
      0,
      0,
      1,
      1,
      0,
    ],
    "perm": [
      6,
      0,
      1,
      7,
      5,
      2,
      4,
      3,
    ],
  },
  "edges": {
    "orient": [
      0,
      1,
      1,
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      1,
      1,
    ],
    "perm": [
      2,
      10,
      6,
      8,
      11,
      5,
      4,
      3,
      7,
      9,
      0,
      1,
    ],
  },
  "moves": " D2 F2 L B2 U2 R' B2 L' R U2 B U' R' F' L F' D U2 F'",
}
`;

exports[`Cube scramble 2`] = `
[
  [
    "front",
    "up",
    "left",
  ],
  [
    "back",
    "up",
    "front",
  ],
  [
    "down",
    "right",
    "right",
  ],
]
`;

exports[`Cube scramble 3`] = `
[
  [
    "right",
    "down",
    "front",
  ],
  [
    "left",
    "left",
    "up",
  ],
  [
    "back",
    "up",
    "front",
  ],
]
`;

exports[`Cube scramble 4`] = `
[
  [
    "left",
    "front",
    "back",
  ],
  [
    "left",
    "front",
    "back",
  ],
  [
    "left",
    "up",
    "left",
  ],
]
`;

exports[`Cube scramble 5`] = `
[
  [
    "up",
    "down",
    "up",
  ],
  [
    "left",
    "right",
    "right",
  ],
  [
    "down",
    "right",
    "front",
  ],
]
`;

exports[`Cube scramble 6`] = `
[
  [
    "back",
    "front",
    "down",
  ],
  [
    "back",
    "back",
    "down",
  ],
  [
    "up",
    "left",
    "right",
  ],
]
`;

exports[`Cube scramble 7`] = `
[
  [
    "up",
    "back",
    "back",
  ],
  [
    "right",
    "down",
    "down",
  ],
  [
    "down",
    "front",
    "right",
  ],
]
`;
